HR and Purchase hot fix

--- a/erpnext/hr/doctype/medical_insurance_application/medical_insurance_application.json
+++ b/erpnext/hr/doctype/medical_insurance_application/medical_insurance_application.json
@@ -451,7 +451,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-10-04 12:57:50.789367", 
+ "modified": "2017-10-24 16:09:04.552738", 
  "modified_by": "Administrator", 
  "module": "HR", 
  "name": "Medical Insurance Application", 
@@ -460,7 +460,7 @@
  "permissions": [
   {
    "amend": 0, 
-   "apply_user_permissions": 0, 
+   "apply_user_permissions": 1, 
    "cancel": 0, 
    "create": 1, 
    "delete": 1, 
@@ -477,6 +477,7 @@
    "set_user_permissions": 0, 
    "share": 1, 
    "submit": 0, 
+   "user_permission_doctypes": "[\"Employee\"]", 
    "write": 1
   }, 
   {
