--- a/erpnext/projects/doctype/project/project.json
+++ b/erpnext/projects/doctype/project/project.json
@@ -1205,7 +1205,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 4, 
- "modified": "2017-10-21 15:00:48.611758", 
+ "modified": "2017-10-25 14:30:28.245304", 
  "modified_by": "Administrator", 
  "module": "Projects", 
  "name": "Project", 
@@ -1374,6 +1374,27 @@
    "read": 1, 
    "report": 1, 
    "role": "CEO", 
+   "set_user_permissions": 0, 
+   "share": 1, 
+   "submit": 0, 
+   "write": 0
+  }, 
+  {
+   "amend": 0, 
+   "apply_user_permissions": 0, 
+   "cancel": 0, 
+   "create": 0, 
+   "delete": 0, 
+   "email": 1, 
+   "export": 1, 
+   "if_owner": 0, 
+   "import": 0, 
+   "is_custom": 0, 
+   "permlevel": 0, 
+   "print": 1, 
+   "read": 1, 
+   "report": 1, 
+   "role": "Employee", 
    "set_user_permissions": 0, 
    "share": 1, 
    "submit": 0, 
