--- a/erpnext/stock/doctype/stock_settings/stock_settings.json
+++ b/erpnext/stock/doctype/stock_settings/stock_settings.json
@@ -150,7 +150,7 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Clean Description HTML", 
+   "label": "Convert Item Description to Clean HTML", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -648,7 +648,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-11-14 16:06:21.072007", 
+ "modified": "2017-11-14 16:19:50.274518", 
  "modified_by": "Administrator", 
  "module": "Stock", 
  "name": "Stock Settings", 
