Few name changes in messages and license

--- a/erpnext/education/web_form/student_applicant/student_applicant.json
+++ b/erpnext/education/web_form/student_applicant/student_applicant.json
@@ -16,9 +16,9 @@
  "is_standard": 1, 
  "login_required": 1, 
  "max_attachment_size": 0, 
- "modified": "2017-02-21 04:44:46.022738", 
+ "modified": "2017-02-21 05:44:46.022738", 
  "modified_by": "Administrator", 
- "module": "Schools", 
+ "module": "Education", 
  "name": "student-applicant", 
  "owner": "Administrator", 
  "payment_button_label": "Buy Now", 
