[Agriculture Domain] Modified the code to replace Pest doctype with Land Unit doctype - Deleted the Pest doctype and replaced it with the more generic Disease doctype - Deleted the Detected Pest doctype and replaced it with Detected Disease doctype

--- a/erpnext/agriculture/doctype/disease/disease.json
+++ b/erpnext/agriculture/doctype/disease/disease.json
@@ -5,7 +5,7 @@
  "allow_rename": 0, 
  "autoname": "field:common_name", 
  "beta": 0, 
- "creation": "2017-11-10 11:56:28.670375", 
+ "creation": "2017-11-20 17:16:54.496355", 
  "custom": 0, 
  "docstatus": 0, 
  "doctype": "DocType", 
@@ -138,7 +138,6 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "description": "List of tasks to be executed in  case a pest is detected", 
    "fieldname": "section_break_2", 
    "fieldtype": "Section Break", 
    "hidden": 0, 
@@ -235,10 +234,10 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-11-10 12:04:43.370704", 
+ "modified": "2017-11-20 18:39:37.672149", 
  "modified_by": "Administrator", 
  "module": "Agriculture", 
- "name": "Pest", 
+ "name": "Disease", 
  "name_case": "", 
  "owner": "Administrator", 
  "permissions": [
