--- a/erpnext/agriculture/doctype/detected_disease/detected_disease.json
+++ b/erpnext/agriculture/doctype/detected_disease/detected_disease.json
@@ -4,7 +4,7 @@
  "allow_import": 0, 
  "allow_rename": 0, 
  "beta": 0, 
- "creation": "2017-11-09 17:54:57.014173", 
+ "creation": "2017-11-20 17:31:30.772779", 
  "custom": 0, 
  "docstatus": 0, 
  "doctype": "DocType", 
@@ -27,10 +27,10 @@
    "in_global_search": 0, 
    "in_list_view": 1, 
    "in_standard_filter": 0, 
-   "label": "Pest", 
+   "label": "Disease", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "Pest", 
+   "options": "Disease", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -84,10 +84,10 @@
  "issingle": 0, 
  "istable": 1, 
  "max_attachments": 0, 
- "modified": "2017-11-10 12:16:52.421245", 
+ "modified": "2017-11-20 17:31:30.772779", 
  "modified_by": "Administrator", 
  "module": "Agriculture", 
- "name": "Detected Pest", 
+ "name": "Detected Disease", 
  "name_case": "", 
  "owner": "Administrator", 
  "permissions": [], 
