--- a/.travis.yml
+++ b/.travis.yml
@@ -66,8 +66,18 @@ jobs:
       env: Client Side Test
     - # stage
       script:
+        - bench --verbose run-setup-wizard-ui-test
+        - bench execute erpnext.setup.utils.enable_all_roles_and_domains
+        - bench run-ui-tests --app erpnext --test erpnext/agriculture/doctype/fertilizer/test_fertilizer.js
+        - bench run-ui-tests --app erpnext --test erpnext/agriculture/doctype/water_analysis/test_water_analysis.js
+        - bench run-ui-tests --app erpnext --test erpnext/agriculture/doctype/disease/test_disease.js
+        - bench run-ui-tests --app erpnext --test erpnext/agriculture/doctype/soil_texture/test_soil_texture.js
+        - bench run-ui-tests --app erpnext --test erpnext/agriculture/doctype/crop/test_crop.js
+        - bench run-ui-tests --app erpnext --test erpnext/agriculture/doctype/crop_cycle/test_crop_cycle.js
+      env: Agriculture Client Side Test
+    - # stage
+      script:
         - wget http://build.erpnext.com/20171108_190013_955977f8_database.sql.gz
         - bench --force restore ~/frappe-bench/20171108_190013_955977f8_database.sql.gz --mariadb-root-password travis
         - bench migrate
       env: Patch Testing
-
