--- a/erpnext/agriculture/doctype/disease/disease.json
+++ b/erpnext/agriculture/doctype/disease/disease.json
@@ -234,7 +234,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-11-20 18:39:37.672149", 
+ "modified": "2017-12-04 19:20:19.352479", 
  "modified_by": "Administrator", 
  "module": "Agriculture", 
  "name": "Disease", 
@@ -255,7 +255,27 @@
    "print": 1, 
    "read": 1, 
    "report": 1, 
-   "role": "System Manager", 
+   "role": "Agriculture Manager", 
+   "set_user_permissions": 0, 
+   "share": 1, 
+   "submit": 0, 
+   "write": 1
+  }, 
+  {
+   "amend": 0, 
+   "apply_user_permissions": 0, 
+   "cancel": 0, 
+   "create": 0, 
+   "delete": 0, 
+   "email": 1, 
+   "export": 1, 
+   "if_owner": 0, 
+   "import": 0, 
+   "permlevel": 0, 
+   "print": 1, 
+   "read": 1, 
+   "report": 1, 
+   "role": "Agriculture User", 
    "set_user_permissions": 0, 
    "share": 1, 
    "submit": 0, 
