Added Tests for Hotels
Overbooking
Pricing not set

--- a/erpnext/hotels/doctype/hotel_settings/hotel_settings.json
+++ b/erpnext/hotels/doctype/hotel_settings/hotel_settings.json
@@ -8,7 +8,7 @@
  "custom": 0, 
  "docstatus": 0, 
  "doctype": "DocType", 
- "document_type": "", 
+ "document_type": "Setup", 
  "editable_grid": 1, 
  "engine": "InnoDB", 
  "fields": [
@@ -115,7 +115,7 @@
  "issingle": 1, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-12-08 17:51:19.589971", 
+ "modified": "2017-12-09 12:11:12.857308", 
  "modified_by": "Administrator", 
  "module": "Hotels", 
  "name": "Hotel Settings", 
@@ -166,6 +166,7 @@
  "quick_entry": 0, 
  "read_only": 0, 
  "read_only_onload": 0, 
+ "restrict_to_domain": "Hospitality", 
  "show_name_in_global_search": 0, 
  "sort_field": "modified", 
  "sort_order": "DESC", 
