--- a/erpnext/projects/doctype/project/project.json
+++ b/erpnext/projects/doctype/project/project.json
@@ -1034,7 +1034,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "total_planned_sales", 
+   "fieldname": "total_sales_amount", 
    "fieldtype": "Currency", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -1043,7 +1043,7 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Total Planned Sales (via Sales Order)", 
+   "label": "Total Sales Amount (via Sales Order)", 
    "length": 0, 
    "no_copy": 0, 
    "permlevel": 0, 
@@ -1285,7 +1285,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 4, 
- "modified": "2017-12-09 10:48:55.379634", 
+ "modified": "2017-12-10 08:40:46.843201", 
  "modified_by": "Administrator", 
  "module": "Projects", 
  "name": "Project", 
