--- a/erpnext/hr/doctype/promotion_and_merit_increase/promotion_and_merit_increase.json
+++ b/erpnext/hr/doctype/promotion_and_merit_increase/promotion_and_merit_increase.json
@@ -121,7 +121,7 @@
    "label": "Date of Joining", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "employee.date_of_birth", 
+   "options": "employee.date_of_joining", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -475,7 +475,7 @@
    "collapsible": 0, 
    "columns": 0, 
    "fieldname": "new_level", 
-   "fieldtype": "Link", 
+   "fieldtype": "Int", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
@@ -486,69 +486,7 @@
    "label": "New Level", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "Level", 
-   "permlevel": 0, 
-   "precision": "", 
-   "print_hide": 0, 
-   "print_hide_if_no_value": 0, 
-   "read_only": 0, 
-   "remember_last_selected_value": 0, 
-   "report_hide": 0, 
-   "reqd": 1, 
-   "search_index": 0, 
-   "set_only_once": 0, 
-   "unique": 0
-  }, 
-  {
-   "allow_bulk_edit": 0, 
-   "allow_on_submit": 0, 
-   "bold": 0, 
-   "collapsible": 0, 
-   "columns": 0, 
-   "fieldname": "new_branch", 
-   "fieldtype": "Link", 
-   "hidden": 1, 
-   "ignore_user_permissions": 0, 
-   "ignore_xss_filter": 0, 
-   "in_filter": 0, 
-   "in_global_search": 0, 
-   "in_list_view": 0, 
-   "in_standard_filter": 0, 
-   "label": "New Branch", 
-   "length": 0, 
-   "no_copy": 0, 
-   "options": "Branch", 
-   "permlevel": 0, 
-   "precision": "", 
-   "print_hide": 0, 
-   "print_hide_if_no_value": 0, 
-   "read_only": 0, 
-   "remember_last_selected_value": 0, 
-   "report_hide": 0, 
-   "reqd": 0, 
-   "search_index": 0, 
-   "set_only_once": 0, 
-   "unique": 0
-  }, 
-  {
-   "allow_bulk_edit": 0, 
-   "allow_on_submit": 0, 
-   "bold": 0, 
-   "collapsible": 0, 
-   "columns": 0, 
-   "fieldname": "new_department", 
-   "fieldtype": "Link", 
-   "hidden": 0, 
-   "ignore_user_permissions": 0, 
-   "ignore_xss_filter": 0, 
-   "in_filter": 0, 
-   "in_global_search": 0, 
-   "in_list_view": 0, 
-   "in_standard_filter": 0, 
-   "label": "New Department", 
-   "length": 0, 
-   "no_copy": 0, 
-   "options": "Department", 
+   "options": "", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -579,7 +517,38 @@
    "label": "New Base", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "new_grade.base", 
+   "options": "", 
+   "permlevel": 0, 
+   "precision": "", 
+   "print_hide": 0, 
+   "print_hide_if_no_value": 0, 
+   "read_only": 0, 
+   "remember_last_selected_value": 0, 
+   "report_hide": 0, 
+   "reqd": 0, 
+   "search_index": 0, 
+   "set_only_once": 0, 
+   "unique": 0
+  }, 
+  {
+   "allow_bulk_edit": 0, 
+   "allow_on_submit": 0, 
+   "bold": 0, 
+   "collapsible": 0, 
+   "columns": 0, 
+   "fieldname": "new_branch", 
+   "fieldtype": "Link", 
+   "hidden": 0, 
+   "ignore_user_permissions": 0, 
+   "ignore_xss_filter": 0, 
+   "in_filter": 0, 
+   "in_global_search": 0, 
+   "in_list_view": 0, 
+   "in_standard_filter": 0, 
+   "label": "New Branch", 
+   "length": 0, 
+   "no_copy": 0, 
+   "options": "Branch", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -752,8 +721,8 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "branch", 
-   "fieldtype": "Link", 
+   "fieldname": "base", 
+   "fieldtype": "Read Only", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
@@ -761,15 +730,15 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Branch", 
+   "label": "Base", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "Branch", 
+   "options": "grade.base", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
    "print_hide_if_no_value": 0, 
-   "read_only": 1, 
+   "read_only": 0, 
    "remember_last_selected_value": 0, 
    "report_hide": 0, 
    "reqd": 0, 
@@ -814,7 +783,7 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "employment_type", 
+   "fieldname": "branch", 
    "fieldtype": "Link", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
@@ -823,10 +792,10 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Employment Type", 
+   "label": "Branch", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "Employment Type", 
+   "options": "Branch", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
@@ -845,8 +814,8 @@
    "bold": 0, 
    "collapsible": 0, 
    "columns": 0, 
-   "fieldname": "base", 
-   "fieldtype": "Read Only", 
+   "fieldname": "employment_type", 
+   "fieldtype": "Link", 
    "hidden": 0, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
@@ -854,15 +823,15 @@
    "in_global_search": 0, 
    "in_list_view": 0, 
    "in_standard_filter": 0, 
-   "label": "Base", 
+   "label": "Employment Type", 
    "length": 0, 
    "no_copy": 0, 
-   "options": "grade.base", 
+   "options": "Employment Type", 
    "permlevel": 0, 
    "precision": "", 
    "print_hide": 0, 
    "print_hide_if_no_value": 0, 
-   "read_only": 0, 
+   "read_only": 1, 
    "remember_last_selected_value": 0, 
    "report_hide": 0, 
    "reqd": 0, 
@@ -999,7 +968,7 @@
    "default": "", 
    "fieldname": "commencement_date", 
    "fieldtype": "Date", 
-   "hidden": 0, 
+   "hidden": 1, 
    "ignore_user_permissions": 0, 
    "ignore_xss_filter": 0, 
    "in_filter": 0, 
@@ -1013,7 +982,7 @@
    "precision": "", 
    "print_hide": 0, 
    "print_hide_if_no_value": 0, 
-   "read_only": 0, 
+   "read_only": 1, 
    "remember_last_selected_value": 0, 
    "report_hide": 0, 
    "reqd": 0, 
@@ -1216,7 +1185,7 @@
  "issingle": 0, 
  "istable": 0, 
  "max_attachments": 0, 
- "modified": "2017-12-19 12:47:54.905785", 
+ "modified": "2018-01-16 20:32:04.265757", 
  "modified_by": "Administrator", 
  "module": "HR", 
  "name": "Promotion and Merit Increase", 
